# Aqua

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/Aqua/Core/: Assert.hpp  AssetManager.hpp  Color.hpp  Entity.hpp  Font.hpp  Game.hpp  Log.hpp  PNGImage.hpp  Render.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Types.hpp  Window.hpp
include/Aqua/Util/: LQD.hpp
shaders/: sprite.frag  sprite.vert
src/: AssetManager.cpp  Game.cpp  Log.cpp  Render.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp
